# NIFS3-CHARTS

./: README.md  REAMDE.MD  setup.cfg
apidocs/: classIndex.html  index.html  moduleIndex.html  nameIndex.html  objects.inv  python.html  src.events.html  src.html  src.interface.MainWindow.html  src.interface.html  src.main.html  src.nifs.html  src.ploting.html  src.reading.html  src.saving.html  undoccedSummary.html
examples/csv/: example1.csv  example2.csv  example3.csv  example4.csv  example5.csv  example6.csv
src/: events.py  interface.py  main.py  nifs.py  ploting.py  reading.py  saving.py
src/.mypy_cache/3.8/: _ast.meta.json  _csv.meta.json  _importlib_modulespec.meta.json  abc.meta.json  ast.meta.json  builtins.meta.json  codecs.meta.json  csv.meta.json  io.meta.json  math.meta.json  mmap.meta.json  nifs.data.json  nifs.meta.json  posix.meta.json  reading.data.json  reading.meta.json  saving.data.json  saving.meta.json  sys.meta.json  types.meta.json  typing.meta.json
src/.mypy_cache/3.8/collections/: __init__.meta.json  abc.meta.json
src/.mypy_cache/3.8/importlib/: __init__.meta.json  abc.meta.json
src/.mypy_cache/3.8/os/: __init__.meta.json  path.meta.json
src/nif3_charts_michalk44.egg-info/: PKG-INFO  SOURCES.txt
tests/: test1.py
