[metadata]
name = nif3-charts-michalk44
version = 0.0.1
author = Michal Kierul
author_email = kierul.michal@gmail.com
description = Interpolation
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/michalk33/NIFS3-CHARTS
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
